update work history

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
                         experience.
                         <br>
                         I am ... <br>
-                        * full of experiences in web development🍺 <br>
-                        * good at communication👬 <br>
+                        * full of experiences in web development <br>
+                        * good at communication <br>
                         * easy to deal with🤗 <br>
                         * flexible for working hours and cultures🌙 <br>
                         * devoted team collaboration👨‍👦‍👦 <br>
-                        * very creative and a fast learner🏃🏻‍ <br>
+                        * very creative and a fast learner <br>
                         <!-- * willing to save your time and money💲 <br> -->
                         <hr>
                         
@@ -194,7 +194,7 @@
 
                     <hr>
                     *****Fan facts*****<br>
-                    I still love blockchain projects (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
+                    I still love web3 projects (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
                     And recently I am using new AI products DALL-E2 and GPT-4 from 
                     <a href="https://openai.com/">openai.com</a> for some projects and to be sure you will love them too!<br>
                   </div>
@@ -214,120 +214,6 @@
                 <h2>Resume</h2>
               </div>
               <div class="page-content">
-
-                <div class="row">
-                  <div class="col-sm-6 col-md-6 col-lg-6">
-                    <div class="block">
-                      <div class="block-title">
-                        <h3>Education</h3>
-                      </div>
-
-                      <div class="timeline">
-                        <!-- Education 1 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">Technological University Dublin</h4>
-                          <span class="item-period">Apr 2009 - Jun 2014</span>
-                          <span class="item-small">General course</span>
-                          <p class="item-description">Master of Science in Computer Science<br> GPA: 4.66</p>
-                        </div>
-                        <!-- / Education 1 -->
-
-                        <!-- Education 2 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">Royal Irish Academy</h4>
-                          <span class="item-period">Jun 2014 - Dec 2016</span>
-                          <span class="item-small">Specialization Course</span>
-                          <p class="item-description">Bachelor of Engineering in Electrical and Electronics<br> GPA: 4.3
-                            (9.5 / 10)</p>
-                        </div>
-                        <!-- / Education 2 -->
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-sm-6 col-md-6 col-lg-6">
-                    <div class="block">
-                      <div class="block-title">
-                        <h3>Experience</h3>
-                      </div>
-
-                      <div class="timeline">
-                        <!-- Experience 1 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">Royal Irish Academy (Dublin, Ireland)</h4>
-                          <span class="item-period">Apr 2014 - Aug 2017</span>
-                          <span class="item-small">Software Engineer</span>
-                          <p class="item-description">
-                          <ul>
-                            <li>Worked as a software engineer in a large team for national tasks using Tensorflow and
-                              Python.
-                            </li>
-                            <li>Worked as a web developer, using php CMS frameworks (CI, Laravel, WordPress,
-                              Prestashop, …), HTML5, CSS3 and JavaScript libraries (React, D3.js, Pixi.js, ...) for medical, educational sites.</li>
-                          </ul>
-                          </p>
-                        </div>
-                        <!-- / Experience 1 -->
-
-                        <!-- Experience 2 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">Snowfall Company (Finland)</h4>
-                          <span class="item-period">Nov 2016 - Feb 2018</span>
-                          <span class="item-small">Python Developer(DevOps) (remote)</span>
-                          <p class="item-description">Python is all the rage in the world and its frameworks are rapidly
-                            improving and releasing. I worked as Backend developer and DevOps using Python frameworks(Flask/Django).</p>
-                        </div>
-                        <!-- / Experience 2 -->
-
-                        <!-- Experience 2 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">True Prodigy (Texas, US)</h4>
-                          <span class="item-period">Dec 2017 - Mar 2019</span>
-                          <span class="item-small">Frontend developer (remote)</span>
-                          <p class="item-description">I started my career as a freelancer since 2017. Prodigy was one of
-                            my biggest clients, which I worked as frontend developer using React for.
-                            Worked at Prodigy company as a Full-stack developer (MERN stack) and React-Native developer
-                            for Hybrid Mobile development. This was a big project and we were able to finish it
-                            successfully.
-                          </p>
-                        </div>
-                        <!-- / Experience 2 -->
-
-                        <!-- Experience 2 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">Parker Lane Group (London, UK)</h4>
-                          <span class="item-period">Sep 2017 - Feb 2018</span>
-                          <span class="item-small">Frontend developer</span>
-                          <p class="item-description">Parker Lane Group is a Resale as a Service (RaaS) platform. I worked as a frontend developer and was responsible for integration 3rd APIs.</p>
-                        </div>
-                        <!-- / Experience 2 -->
-
-                        <!-- Experience 3 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">Brightcast (London, UK)</h4>
-                          <span class="item-period">Dec 2019 - Aug 2020</span>
-                          <span class="item-small">Full-stack developer</span>
-                          <p class="item-description">I worked alone with their CTO and I was responsible for both
-                            frontend (Angular) and backend (ASP.NET Core), even deploying to Azure.<br>Theo, the CTO was one of my best companions ever.</p>
-                        </div>
-                        <!-- / Experience 3 -->
-
-                        <!-- Experience 3 -->
-                        <div class="timeline-item">
-                          <h4 class="item-title">TazzerClean (Rotherham, UK)</h4>
-                          <span class="item-period">Jul 2022 - </span>
-                          <span class="item-small">Project manager, DevOps</span>
-                          <p class="item-description">ASP.NET Core for backend API, Vue.js for frontend. My role was to
-                            assign tasks to other developers and
-                            to check their code, to merge, deploy the changes. I used to deploy with Azure Repos'
-                            pipelines and release. I also used to work as a technical supporter with DBMS, database
-                            structure and project flow.</p>
-                        </div>
-                        <!-- / Experience 3 -->
-                      </div>
-                    </div>
-                  </div>
-                </div>
 
                 <div class="row">
                   <div class="col-sm-6 col-md-6 col-lg-6">
@@ -412,6 +298,121 @@
                     </div>
                   </div>
                 </div>
+
+                <div class="row">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="block">
+                      <div class="block-title">
+                        <h3>Education</h3>
+                      </div>
+
+                      <div class="timeline">
+                        <!-- Education 1 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">Technological University Dublin</h4>
+                          <span class="item-period">Apr 2009 - Jun 2014</span>
+                          <span class="item-small">General course</span>
+                          <p class="item-description">Master of Science in Computer Science<br> GPA: 4.66</p>
+                        </div>
+                        <!-- / Education 1 -->
+
+                        <!-- Education 2 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">Royal Irish Academy</h4>
+                          <span class="item-period">Jun 2014 - Dec 2016</span>
+                          <span class="item-small">Specialization Course</span>
+                          <p class="item-description">Bachelor of Engineering in Electrical and Electronics<br> GPA: 4.3
+                            (9.5 / 10)</p>
+                        </div>
+                        <!-- / Education 2 -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="block">
+                      <div class="block-title">
+                        <h3>Experience</h3>
+                      </div>
+
+                      <div class="timeline">
+                        <!-- Experience 1 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">Royal Irish Academy (Dublin, Ireland)</h4>
+                          <span class="item-period">Apr 2014 - Aug 2017</span>
+                          <span class="item-small">Software Engineer</span>
+                          <p class="item-description">
+                          <ul>
+                            <li>Worked as a software engineer in a large team for national tasks using Tensorflow and
+                              Python.
+                            </li>
+                            <li>Worked as a web developer, using php CMS frameworks (CI, Laravel, WordPress,
+                              Prestashop), HTML5, CSS3 and JavaScript libraries (React, D3.js, Pixi.js, ...) for ecommerce, medical, educational industries.</li>
+                          </ul>
+                          </p>
+                        </div>
+                        <!-- / Experience 1 -->
+
+                        <!-- Experience 2 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">Snowfall Company (Texas, US)</h4>
+                          <span class="item-period">Jul 2017 - Jun 2018</span>
+                          <span class="item-small">Python Developer(DevOps) (remote)</span>
+                          <p class="item-description">Python is all the rage in the world and its frameworks are rapidly
+                            improving and releasing. I worked as Backend developer and DevOps using Python frameworks(Flask/Django).</p>
+                        </div>
+                        <!-- / Experience 2 -->
+
+                        <!-- Experience 2 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">True Prodigy (Texas, US)</h4>
+                          <span class="item-period">Apr 2019 - </span>
+                          <span class="item-small">Frontend developer (remote)</span>
+                          <p class="item-description">I started my career as a freelancer since 2017. Prodigy was one of
+                            my biggest clients, which I worked as frontend developer using React for.
+                            Worked at Prodigy company as a Full-stack developer (MERN stack) and React-Native developer
+                            for Hybrid Mobile development. This was a big project and we were able to finish it
+                            successfully.
+                          </p>
+                        </div>
+                        <!-- / Experience 2 -->
+
+                        <!-- Experience 2 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">Parker Lane Group (London, UK)</h4>
+                          <span class="item-period">Sep 2017 - Feb 2018</span>
+                          <span class="item-small">Frontend developer</span>
+                          <p class="item-description">Parker Lane Group is a Resale as a Service (RaaS) platform. I worked as a frontend developer and was responsible for integration 3rd APIs.</p>
+                        </div>
+                        <!-- / Experience 2 -->
+
+                        <!-- Experience 3 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">Brightcast (London, UK)</h4>
+                          <span class="item-period">Dec 2019 - Aug 2020</span>
+                          <span class="item-small">Full-stack developer</span>
+                          <p class="item-description">I worked alone with their CTO and I was responsible for both
+                            frontend (Angular) and backend (ASP.NET Core), even deploying to Azure.<br>Theo, the CTO was one of my best companions ever.</p>
+                        </div>
+                        <!-- / Experience 3 -->
+
+                        <!-- Experience 3 -->
+                        <div class="timeline-item">
+                          <h4 class="item-title">TazzerClean (Rotherham, UK)</h4>
+                          <span class="item-period">Jul 2022 - Feb 2023</span>
+                          <span class="item-small">Project manager, DevOps</span>
+                          <p class="item-description">ASP.NET Core for backend API, Vue.js for frontend. My role was to
+                            assign tasks to other developers and
+                            to check their code, to merge, deploy the changes. I used to deploy with Azure Repos'
+                            pipelines and release. I also used to work as a technical supporter with DBMS, database
+                            structure and project flow.</p>
+                        </div>
+                        <!-- / Experience 3 -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
 
                 <!-- Download Resume Button -->
                 <div class="row">
