--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <div class="preloader-spinner">
       </div>
     </div>
+    <h1 class="ml7">
+      <span class="text-wrapper">
+        <span class="letters">Jason is waiting for you...</span>
+      </span>
+    </h1>
   </div>
   <!-- /Loading animation -->
 
@@ -199,7 +204,7 @@
                     <a href="https://openai.com/">openai.com</a> for some projects and to be sure you will love them too!<br>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-6" style="display: flex; justify-content: center;">
-                    <canvas id="star" width="300" height="300"></canvas>
+                    <canvas id="star" width="300" height="300" style="cursor: move"></canvas>
                   </div>
                 </div>
               </div>
