--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                       <li><span class="title">Age</span><span class="age-value value"></span></li>
                       <li><span class="title">Residence</span><span class="value">Ireland</span></li>
                       <li><span class="title">Address</span><span class="value">Apartment 2, 88 North king Street Dublin</span></li>
-                      <li><span class="title">e-mail</span><span class="value"><a href="mailto:jason.me.biz@gmail.com">topwebfulldev@gmail.com</a></span></li>
+                      <li><span class="title">e-mail</span><span class="value"><a href="mailto:jason.me.biz@gmail.com">jason.me.biz@gmail.com</a></span></li>
                       <li><span class="title">Phone</span><span class="value">+1 323 412 7112 <i
                             class="fa fa-whatsapp"></i></span></li>
                       <!-- <li><span class="title">Freelance</span><span class="value available">Full-time Available</span> -->
