--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                     <hr>
                     *****Fan facts*****<br>
-                    I still love web3 projects (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
+                    I still love web3 (DApp, DAO, DeFi) despite the 'crypto winter'.<br>
                     And recently I am using new AI products DALL-E2 and GPT-4 from 
                     <a href="https://openai.com/">openai.com</a> for some projects and to be sure you will love them too!<br>
                   </div>
