--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <div class="timeline-item">
                           <h4 class="item-title">TazzerClean (Rotherham, UK)</h4>
                           <span class="item-period">Jul 2022 - Feb 2023</span>
-                          <span class="item-small">Project manager, DevOps</span>
+                          <span class="item-small">Team leader, DevOps</span>
                           <p class="item-description">ASP.NET Core for backend API, Vue.js for frontend. My role was to
                             assign tasks to other developers and
                             to check their code, to merge, deploy the changes. I used to deploy with Azure Repos'
