--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         <h4>Maintain</h4>
                         <p>Provide guidance and troubleshooting support to clients.</p>
                         <p>Document bug reports, tickets, and any code changes.</p>
-                        <p>Contribute to the design and development of back-end and APIs.</p>
+                        <p>Contribute to the design and development of backend and APIs.</p>
                       </div>
                     </div>
                   </div>
@@ -655,7 +655,7 @@
                       <a class="filter btn btn-sm btn-link active" data-group="all">All</a>
                     </li>
                     <li>
-                      <a class="filter btn btn-sm btn-link" data-group="fe">Front-End</a>
+                      <a class="filter btn btn-sm btn-link" data-group="fe">Fronend</a>
                     </li>
                     <li>
                       <a class="filter btn btn-sm btn-link" data-group="be">Backend</a>
@@ -688,7 +688,7 @@
                         <img src="images/portfolio/caremesh.com.png" alt="" loading="lazy">
                         <div>
                           <h5 class="name">Caremesh</h5>
-                          <small>Front-end</small>
+                          <small>Fronend</small>
                           <i class="fa fa-file-text-o"></i>
                         </div>
                       </a>
@@ -993,7 +993,7 @@
                           <li><a href="#">CSS3</a></li>
                         </ul>
                         <a href="blog-post-1.html">
-                          <h4 class="blog-item-title">Front-End Challenge Accepted: CSS 3D Cube</h4>
+                          <h4 class="blog-item-title">Frontend Challenge Accepted: CSS 3D Cube</h4>
                         </a>
                       </div>
                     </div>
