--- a/portfolio-1.html
+++ b/portfolio-1.html
@@ -59,7 +59,7 @@
                     <li><p><i class="fa fa-calendar"></i> 15 Sept, 2016</p></li>
                 </ul>
 
-                <p class="text-justify">I have built almost 90% of its front-end functionalities using React.js.</p>
+                <p class="text-justify">I have built almost 90% of its frontend functionalities using React.js.</p>
                 <li>Seamless user interface based on the Material Design paradigm</li>
                 <li>The most secure way of handling user attributes and records</li>
                 <li>Super-responsive desktop/mobile UI layouts</li>
