--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -62,7 +62,7 @@
                     <li><p><i class="fa fa-calendar"></i> 10 Mar, 2018</p></li>
                 </ul>
 
-                <p class="text-justify">I have participated in both front-end (Shopify) and backend (Laravel) development of this project.</p>
+                <p class="text-justify">I have participated in both frontend (Shopify) and backend (Laravel) development of this project.</p>
                 <!-- /Project Description -->
 
                 <!-- Technology -->
