--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                       <h1>Jason O'Mellan</h1>
                       <div class="owl-carousel text-rotation">
                         <div class="item">
-                          <div class="sp-subtitle">Backend Developer</div>
+                          <div class="sp-subtitle">Backend Engineer</div>
                         </div>
                         <div class="item">
-                          <div class="sp-subtitle">Frontend Developer</div>
+                          <div class="sp-subtitle">Frontend Engineer</div>
                         </div>
                       </div>
                     </div>
@@ -141,8 +141,8 @@
                         <h3>About <span>Me</span></h3>
                       </div>
                       <p>
-                        Hello! I am Jason, a full-stack developer focused on frontend development.<br>
-                        As a seasoned web developer, I will help you build sophisticated web apps to boost your sales
+                        Hello! I am Jason, a full-stack engineer focused on frontend development.<br>
+                        As a seasoned web engineer, I will help you build sophisticated web apps to boost your sales
                         and cement your reputation!<br><br>
                         I love sharing my talents and vast coding experience with foreign companies.<br>
                         It gives me great satisfaction to see a company gain from my experience and talents. <br>
@@ -349,7 +349,7 @@
                             <li>Worked as a software engineer in a large team for national tasks using Tensorflow and
                               Python.
                             </li>
-                            <li>Worked as a web developer, using php CMS frameworks (CI, Laravel, WordPress,
+                            <li>Worked as a web engineer, using php CMS frameworks (CI, Laravel, WordPress,
                               Prestashop), HTML5, CSS3 and JavaScript libraries (React, D3.js, Pixi.js, ...) for ecommerce, medical, educational industries.</li>
                           </ul>
                           </p>
@@ -360,9 +360,9 @@
                         <div class="timeline-item">
                           <h4 class="item-title">Snowfall Company (Texas, US)</h4>
                           <span class="item-period">Jul 2017 - Jun 2018</span>
-                          <span class="item-small">Python Developer(DevOps) (remote)</span>
+                          <span class="item-small">Python engineer(DevOps) (remote)</span>
                           <p class="item-description">Python is all the rage in the world and its frameworks are rapidly
-                            improving and releasing. I worked as Backend developer and DevOps using Python frameworks(Flask/Django).</p>
+                            improving and releasing. I worked as Backend engineer and DevOps using Python frameworks(Flask/Django).</p>
                         </div>
                         <!-- / Experience 2 -->
 
@@ -370,10 +370,10 @@
                         <div class="timeline-item">
                           <h4 class="item-title">True Prodigy (Texas, US)</h4>
                           <span class="item-period">Apr 2019 - </span>
-                          <span class="item-small">Frontend developer (remote)</span>
+                          <span class="item-small">Frontend engineer (remote)</span>
                           <p class="item-description">I started my career as a freelancer since 2017. Prodigy was one of
-                            my biggest clients, which I worked as frontend developer using React for.
-                            Worked at Prodigy company as a Full-stack developer (MERN stack) and React-Native developer
+                            my biggest clients, which I worked as frontend engineer using React for.
+                            Worked at Prodigy company as a Full-stack engineer (MERN stack) and React-Native engineer
                             for Hybrid Mobile development. This was a big project and we were able to finish it
                             successfully.
                           </p>
@@ -384,8 +384,8 @@
                         <div class="timeline-item">
                           <h4 class="item-title">Parker Lane Group (London, UK)</h4>
                           <span class="item-period">Sep 2017 - Feb 2018</span>
-                          <span class="item-small">Frontend developer</span>
-                          <p class="item-description">Parker Lane Group is a Resale as a Service (RaaS) platform. I worked as a frontend developer and was responsible for integration 3rd APIs.</p>
+                          <span class="item-small">Frontend engineer</span>
+                          <p class="item-description">Parker Lane Group is a Resale as a Service (RaaS) platform. I worked as a frontend engineer and was responsible for integration 3rd APIs.</p>
                         </div>
                         <!-- / Experience 2 -->
 
@@ -393,7 +393,7 @@
                         <div class="timeline-item">
                           <h4 class="item-title">Brightcast (London, UK)</h4>
                           <span class="item-period">Dec 2019 - Aug 2020</span>
-                          <span class="item-small">Full-stack developer</span>
+                          <span class="item-small">Full-stack engineer</span>
                           <p class="item-description">I worked alone with their CTO and I was responsible for both
                             frontend (Angular) and backend (ASP.NET Core), even deploying to Azure.<br>Theo, the CTO was one of my best companions ever.</p>
                         </div>
