--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Resume - Jason</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="description" content="Resume - Jason" />
-  <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
-  <meta name="author" content="lmtheme" />
+  <meta name="keywords" content="jason mellan, vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
+  <meta name="author" content="jason mellan" />
   <link rel="shortcut icon" href="favicon.ico">
 
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
