update phone number

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                       <li><span class="title">Residence</span><span class="value">Serbia</span></li>
                       <li><span class="title">Address</span><span class="value">53, Jovana Brankovica Batajnica, Belgrade</span></li>
                       <li><span class="title">e-mail</span><span class="value"><a href="mailto:jason.me.biz@gmail.com">jason.me.biz@gmail.com</a></span></li>
-                      <li><span class="title">Phone</span><span class="value">+1 323 412 7112 <i
+                      <li><span class="title">Phone</span><span class="value">+381 9970 79216 <i
                             class="fa fa-whatsapp"></i></span></li>
                       <!-- <li><span class="title">Freelance</span><span class="value available">Full-time Available</span> -->
                       </li>
